argocd/manifests/stirling-pdf/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stirling-pdf
  labels:
    app.kubernetes.io/name: stirling-pdf
    app.kubernetes.io/managed-by: argocd
