argocd/manifests/stirling-pdf/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
  labels:
    app: stirling-pdf
    app.kubernetes.io/name: stirling-pdf
spec:
  type: ClusterIP
  selector:
    app: stirling-pdf
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
